--- a/lectur/fruitshopping/templates/fruitshopping/base.html
+++ b/lectur/fruitshopping/templates/fruitshopping/base.html
@@ -1,7 +1,11 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Hello</title>
+        <link rel="stylesheet" href="{% static 'fruitshopping/styles.css' %}">
+
     </head>
     <body>
         <h1>Hello, {{name}}!</h1>
