--- a/lectur/fruitshopping/templates/fruitshopping/index.html
+++ b/lectur/fruitshopping/templates/fruitshopping/index.html
@@ -1,9 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Hello</title>
+        <link rel="stylesheet" href="{% static 'fruitshopping/styles.css' %}">
     </head>
     <body>
         <h1>Hello, World!</h1>
+
+        {% for item in items  %}
+        <li>{{item}}</li>
+        {% endfor %}
     </body>
 </html>
